objects/ESignGenie_Log__c.object
<CustomObject>
    <fields>
        <fullName>API_Url__c</fullName>
        <label>API Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party_Details__c</fullName>
        <label>Party Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Obj_Name__c</fullName>
        <label>Salesforce Obj Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Record_Id__c</fullName>
        <label>Salesforce Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESignGenie Log</label>
    <nameField>
        <label>ESignGenie Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ESignGenie Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>